deployment-stragies/canary/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-stable
  namespace: canary
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      version: stable
  template:
    metadata:
      labels:
        app: nginx
        version: stable
    spec:
      containers:
      - name: nginx
        image: uday745/nginx:app1
        ports:
        - containerPort: 80
