deployment-stragies/canary/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-canary
  namespace: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
      version: canary
  template:
    metadata:
      labels:
        app: nginx
        version: canary
    spec:
      containers:
      - name: nginx
        image: uday745/nginx:app2
        ports:
        - containerPort: 80
