deployment-stragies/canary/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: canary
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30385
  type: NodePort
